# option-repro

./: package.json
contracts/: Cargo.toml  Forc.toml
contracts/src/: main.sw
contracts/tests/: harness.rs
src/contracts/: ContractsAbi.d.ts
src/contracts/factories/: ContractsAbi__factory.ts
